--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" href="style.css">
 
-  <title>WhatsApp Web</title>
+  <title>WhatsApp TAyayb Web</title>
 </head>
 
 <body>
